--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Test-Mojo-Role-OpenAPI-Modern
 
 {{$NEXT}}
+          - new interfaces request_invalid, request_not_valid,
+            response_invalid, response_not_valid
 
 0.003     2023-12-12 06:21:13Z
           - fix failing test due to missing optional prereq
