request_invalid, response_invalid take error strings to search for

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Test-Mojo-Role-OpenAPI-Modern
 
 {{$NEXT}}
+          - request_invalid, response_invalid may now take error strings to
+            search for
 
 0.004     2023-12-13 05:07:03Z
           - new interfaces request_invalid, request_not_valid,
