--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Test-Mojo-Role-OpenAPI-Modern
 
+{{$NEXT}}
+
 0.005     2023-12-20 21:26:03Z
           - request_invalid, response_invalid may now take error strings to
             search for
