--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for Test-Mojo-Role-OpenAPI-Modern
             dump_request_validation_result which dump validation results, and
             a setter test_openapi_verbose to do so automatically on validation
             failures
+          - adjust tests for changes in OpenAPI::Modern 0.068
 
 0.005     2023-12-20 21:26:03Z
           - request_invalid, response_invalid may now take error strings to
