--- a/README.pod
+++ b/README.pod
@@ -8,7 +8,7 @@ Test::Mojo::Role::OpenAPI::Modern - Test::Mojo role providing access to an OpenA
 
 =head1 VERSION
 
-version 0.005
+version 0.006
 
 =head1 SYNOPSIS
 
@@ -57,8 +57,12 @@ version 0.005
     ->status_is(200)
     ->json_is('/status', 'ok')
     ->request_valid
+    ->or->dump_validation_request_result('basic')
     ->response_valid
+    ->or->dump_validation_response_result('basic')
     ->operation_id_is('my_foo_request');
+
+  $t->test_openapi_verbose(1);  # automatically dump validation errors on test failure
 
   $t->post_ok('/foo/123', form => { salutation => 'hi' })
     ->status_is(400)
@@ -88,6 +92,13 @@ information on how to customize your validation and provide the specification do
 If not provided, the object is constructed using configuration values passed to the application
 under the C<openapi> key (see L<Test::Mojo/new>), as for L<Mojolicious::Plugin::OpenAPI::Modern>,
 or re-uses the object from the application itself if that plugin is applied.
+
+=head2 test_openapi_verbose
+
+When true, failing request and response validation tests will dump the actual validation result via
+L</dump_request_validation_result> or L</dump_response_validation_result>.
+
+Defaults to false.
 
 =head2 request_valid
 
@@ -126,10 +137,32 @@ or calculates it if not already available.
 
 Does not emit a test result.
 
+=head2 dump_request_validation_result
+
+Prints the L<JSON::Schema::Modern::Result> object for the validation result for the last request
+(calculates it if not already available) to the test output stream.
+
+Takes an optional argument indicating the result format, see
+L<JSON::Schema::Modern::Result/output_format>. Defaults to C<data_only>, which is the format used
+for comparing error responses in L</request_not_valid>.
+
+Does not emit a test result.
+
 =head2 response_validation_result
 
 Returns the L<JSON::Schema::Modern::Result> object for the validation result for the last response,
 or calculates it if not already available.
+
+Does not emit a test result.
+
+=head2 dump_response_validation_result
+
+Prints the L<JSON::Schema::Modern::Result> object for the validation result for the last response
+(calculates it if not already available) to the test output stream.
+
+Takes an optional argument indicating the result format, see
+L<JSON::Schema::Modern::Result/output_format>. Defaults to C<data_only>, which is the format used
+for comparing error responses in L</response_not_valid>.
 
 Does not emit a test result.
 
