--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Test-Mojo-Role-OpenAPI-Modern
 
 {{$NEXT}}
           - adjust tests for changes in JSON::Schema::Modern 0.598
+          - fix usage of JSON::Schema::Modern::Result objects, in preparation
+            for an upcoming deprecation of boolean overloads
 
 0.006     2024-09-15 17:40:23Z
           - new interfaces dump_request_validation_result,
