--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Test-Mojo-Role-OpenAPI-Modern
 
 {{$NEXT}}
+          - adjust tests for changes in JSON::Schema::Modern 0.598
 
 0.006     2024-09-15 17:40:23Z
           - new interfaces dump_request_validation_result,
