--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Test-Mojo-Role-OpenAPI-Modern
 
 {{$NEXT}}
+          - update some prerequisite versions for interface compatibility
 
 0.007     2025-01-24 02:16:36Z
           - adjust tests for changes in JSON::Schema::Modern 0.598
