--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Test-Mojo-Role-OpenAPI-Modern
 
+{{$NEXT}}
+
 0.008     2025-02-08 19:05:41Z
           - update some prerequisite versions for interface compatibility
 
