--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Test-Mojo-Role-OpenAPI-Modern
 
 {{$NEXT}}
+          - update tests for error and routing changes in OpenAPI::Modern 0.087
 
 0.009     2025-02-09 01:22:47Z
           - update another prerequisite version to avoid other
