increment $VERSION after 0.010 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Test-Mojo-Role-OpenAPI-Modern
 
+{{$NEXT}}
+
 0.010     2025-06-17 21:45:20Z
           - update tests for error and routing changes in OpenAPI::Modern 0.087
 
